update master report

--- a/3-PowerFactory/Group E Assignment 3 Report.ipynb
+++ b/3-PowerFactory/Group E Assignment 3 Report.ipynb
@@ -176,7 +176,119 @@
    "source": [
     "<div style=\"text-align: justify\">\n",
     "With the help of Python script we can easily extract optimal radial configuration The objective function is to minimize power losses, for the actual study time. We define possible scenarios as shown in below configuration diagrams.\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align: justify\">\n",
+    "The first scenario implies switching off all redundant lines R(1),...,R(8). Hence, \n",
+    "`first_scenario = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']`\n",
+    "\n",
+    "We used it as a basis for the rest of scenarios. When building different scenarios, we have to make sure that:\n",
+    "* Network remains radial\n",
+    "* All transformer stations are fed\n",
+    "Hence we tried to look at the grid and think which lines are substitutable without the loss of network radiality and leaving any of he substations disconneted from power. E.g., in the second scenario we can turn off Line(9) but leave R(4). After experimenting, we came out with five different scenarios, including the first one:\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```py\n",
+    "scenarios_ex4['firstScenario']  = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
+    "scenarios_ex4['secondScenario'] = ['R(1)', 'R(2)', 'R(3)', 'Line(9)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
+    "scenarios_ex4['thirdScenario']  = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'Line(20)', 'R(6)', 'R(7)','R(8)']\n",
+    "scenarios_ex4['fourthScenario'] = ['R(1)', 'Line(15)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
+    "scenarios_ex4['fifthScenario']  = ['R(1)', 'Line(15)', 'Line(35)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Which yielded the following results (key of the OrderedDict - name of the configuration (see above), value - Total Network Loss:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```py \n",
+    "OrderedDict([('firstScenario', 4.260876644839072),\n",
+    "             ('thirdScenario', 4.48409292608085),\n",
+    "             ('fourthScenario', 4.510746161018621),\n",
+    "             ('fifthScenario', 4.535880279147257),\n",
+    "             ('secondScenario', 4.572679417943618)])\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align: justify\">\n",
+    "So far we achieved that all scenarios performed worse than a default one (first). Then we modify the next scenario - third to analyse. We leave R(5) swithed on but instead turn off Line(20). In fact, this made a path to trafoSubstation 14 longer than it was through Line(20).\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align: justify\">\n",
+    "Then we disable Line(32) and enable R(8) - network remains radial and all substations are energized. Thus, we energize trafoSubstations(26), (14), (11) and (28) directly from the power source through 20kV substation(5). \n",
+    "</div>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```py\n",
+    "scenarios_ex4['sixthScenario']  = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'Line(20)', 'R(6)', 'R(7)','Line(32)']\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then finally we achieve our best scenario which performed better than a default scenario which shown in below diagrams.\n",
+    "</div>\n",
+    "<CENTER>\n",
+    "    <img  src=\"graphics\\Exercise\\Example\\exercise4_best_configuration-2018-05-28 21.13.34-grid.png\"/>\n",
+    "<CENTER>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<CENTER>\n",
+    "    <img  src=\"graphics\\Exercise\\Example\\exercise4_best_configuration-2018-05-28 21.13.34.png\"/>\n",
+    "<CENTER>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The sorted table of different configurations and its total power losses is presented below, ordered by the best performed scenario:\n",
+    "\n",
+    "Configuration | Radial/All stations fed | Total Network Loss\n",
+    ":--- | :---: | :---:\n",
+    "`['R(1)', 'R(2)', 'R(3)', 'R(4)', 'Line(20)', 'R(6)', 'R(7)','Line(32)']` | True, True | 4.088599154242873\n",
+    "`['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']` | True, True | 4.260876644839072\n",
+    "`['R(1)', 'R(2)', 'R(3)', 'Line(9)', 'R(5)', 'R(6)', 'R(7)','R(8)']` | True, True | 4.48409292608085\n",
+    "`['R(1)', 'R(2)', 'R(3)', 'R(4)', 'Line(20)', 'R(6)', 'R(7)','R(8)']` | True, True | 4.510746161018621\n",
+    "`['R(1)', 'Line(15)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']` | True, True | 4.535880279147257\n",
+    "`['R(1)', 'Line(15)', 'Line(35)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']` | True, True | 4.572679417943618"
    ]
   },
   {
@@ -249,15 +361,6 @@
     "    <img  src=\"graphics\\Exercise\\Example\\exercise6_best_configuration-2018-05-28 23.06.57.png\"/>\n",
     "<CENTER>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
