--- a/3-PowerFactory/Group E Assignment 3 Report.ipynb
+++ b/3-PowerFactory/Group E Assignment 3 Report.ipynb
@@ -366,11 +366,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusion\n",
-    "\n",
+    "## Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align: justify\">\n",
     "As we have experienced, there are a number of possible scenarios even for a very static network. To try all different combinations even in this setting would take a huge amount of computation power. By optimizing it manually, we came up with different configurations and found success in one of them. However, after just one line break(Line 4 ), the network topology changed a lot. It is not very trivial to predict what would happen or what would be our solution in a case of very dynamic breaks of a combination of lines.\n",
     "\n",
-    "As human could be so slow for this task to accomplish, we need algorithms and/or some objective functions for this problem to be tackled in a larger scale.\n"
+    "As human could be so slow for this task to accomplish, we need algorithms and/or some objective functions for this problem to be tackled in a larger scale.\n",
+    "</div>"
    ]
   }
  ],
