--- a/3-PowerFactory/Group E Assignment 3 Report.ipynb
+++ b/3-PowerFactory/Group E Assignment 3 Report.ipynb
@@ -232,7 +232,7 @@
    "metadata": {},
    "source": [
     "<div style=\"text-align: justify\">\n",
-    "So far we achieved that all scenarios performed worse than a default one (first). Then we modify the next scenario - third to analyse. We leave R(5) swithed on but instead turn off Line(20). In fact, this made a path to trafoSubstation 14 longer than it was through Line(20).\n",
+    "So far we achieved that all scenarios performed worse than a default one (first). Then we modify the next scenario ranked by total power loss. We leave R(5) swithed on but, instead, turn off Line(20). In fact, this made a path to trafoSubstation 14 longer than it was through Line(20) thus, worse results were achieved. \n",
     "</div>"
    ]
   },
@@ -259,7 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then finally we achieve our best scenario which performed better than a default scenario which shown in below diagrams.\n",
+    "Hence we finally get our best scenario which performed better than a default scenario which shown in below diagrams.\n",
     "</div>\n",
     "<CENTER>\n",
     "    <img  src=\"graphics\\Exercise\\Example\\exercise4_best_configuration-2018-05-28 21.13.34-grid.png\"/>\n",
@@ -345,7 +345,7 @@
    "metadata": {},
    "source": [
     "<div style=\"text-align: justify\">\n",
-    "In case of a fault event or an intentional outage of an element of the grid, circuit breakers on both side of the line will interrupt until the fault is resolved or planned outage is over. Meanwhile, in the shortest possible time, the grid must be restored that could feed all transformers. In this scenario we switch line(4) off until the end of this exercise. Line(4) connects 20 kV Substation(4) with Trafo Substations(9) and (17). Hence we need to find a way around, e.g., by not disabling R(8). We took configurations from exercise 4 (Optimal Configuration) as a basis and take into account length and load of lines. Below is the best configuration that we found:\n",
+    "In case of a fault event or an intentional outage of an element of the grid, circuit breakers on both side of the line will interrupt until the fault is resolved or planned outage is over. Meanwhile, in the shortest possible time, the grid must be restored that could feed all transformers. In this scenario we switch line(4) off until the end of this exercise. Line(4) connects 20 kV Substation(4) with Trafo Substations(9) and (17). Hence we need to find a way around, e.g., by not disabling R(8). We took configurations from exercise 4 (Optimal Configuration) as a basis and take into account the length and the power load. Below is presented the best configuration that we found:\n",
     "</div>\n",
     "\n",
     "<CENTER>\n",
