update comment line

--- a/4-OpenStreetMap/osm.ipynb
+++ b/4-OpenStreetMap/osm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,42 +31,52 @@
     "Since ipyleaflet working with GeoJSON format, we use query database that convert our extracted database to JSON format.\n",
     "'''\n",
     "\n",
-    "conn_string = \"dbname='gis' user='postgres' password='' host='localhost'\"\n",
+    "conn_string = \"dbname='gis' user='postgres' password='123456' host='localhost'\"\n",
     "conn = ps.connect(conn_string)\n",
     "cur = conn.cursor()\n",
     "query = \"\"\"SELECT \n",
     "               * \n",
     "           FROM \n",
-    "               planet_osm_point p \n",
-    "           INNER JOIN \n",
-    "               planet_osm_nodes n ON n.id=p.osm_id\n",
+    "               planet_osm_line \n",
+    "\n",
+    "\"\"\"\n",
+    "columns = \"\"\"\n",
+    "        operator,\n",
+    "        name,\n",
+    "        highway,\n",
+    "        amenity,\n",
+    "        public_transport,\n",
+    "        railway,\n",
+    "        power,\n",
+    "        bicycle,\n",
+    "        barrier\n",
     "\"\"\"\n",
     "query_json = \"\"\"\n",
     "SELECT row_to_json(fc)\n",
     " FROM ( SELECT 'FeatureCollection' As type, array_to_json(array_agg(f)) As features\n",
     " FROM (SELECT 'Feature' As type\n",
     "    , ST_AsGeoJSON(ST_Transform(lg.way, 4326))::json As geometry\n",
-    "    , row_to_json((SELECT l FROM (SELECT osm_id, access) As l\n",
+    "    , row_to_json((SELECT l FROM (SELECT {}) As l\n",
     "      )) As properties\n",
-    "   FROM planet_osm_line As lg   ) As f )  As fc;\n",
-    "\"\"\"\n",
+    "   FROM planet_osm_line As lg   ) As f )  As fc limit 10;\n",
+    "\"\"\".format(columns)\n",
     "\n",
     "cur.execute(query_json)\n",
     "d = cur.fetchone()\n",
     "\n",
-    "#df = pd.read_sql(query, conn)\n",
+    "df = pd.read_sql(query, conn)\n",
     "conn.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f117d8ee3454f63b301f3ce48dd99bb",
+       "model_id": "bb4041113c3a4f0697cb386fcb8b51b4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -86,17 +96,18 @@
     "#Loading GeoJSON to display extracted data on the map\n",
     "layer = ipyl.GeoJSON(data=d[0], hover_style={'fillColor': 'red'})\n",
     "\n",
-    "#Function handling hover action on the map\n",
+    "#Function handling hover action to show label properties below the map\n",
     "def hover_handler(event=None, id=None, properties=None):\n",
-    "    props = [properties['osm_id'], properties['access']]\n",
-    "    prop_list = [str(x) for x in props]\n",
-    "    label.value = '\\n'.join(prop_list)\n",
+    "    s = \"\"\n",
+    "    for key, value in properties.items():\n",
+    "         s = s + str(key) +\":\" + str(value) + \";\\t\"\n",
+    "    label.value = s\n",
     "    \n",
     "layer.on_hover(hover_handler)\n",
     "map.add_layer(layer)\n",
     "\n",
-    "ipyw.VBox([map, label])\n",
-    "\n"
+    "\n",
+    "ipyw.VBox([map, label])\n"
    ]
   },
   {
