update comment line

--- a/4-OpenStreetMap/osm.ipynb
+++ b/4-OpenStreetMap/osm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,23 +15,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "Preliminary works:\n",
-    "To extract OpenStreetMap data that we want to display here we created filter following transnet project as below:\n",
-    "1. All power nodes/ways of relations tagged with power=*\"\n",
-    "2. All relations tagged with route=power\"\n",
-    "3. All ways and its corresponding nodes tagged with power=*\"\n",
-    "Than we merge all extracts data before converts it using osm2pgsql to postGIS-enabled PostgreSQL databases.\n",
+    "######\n",
+    "# Preliminary works:\n",
+    "# To extract OpenStreetMap data that we want to display here, \n",
+    "#  we created filter following transnet project as below:\n",
+    "#  1. All power nodes/ways of relations tagged with power=*\"\n",
+    "#  2. All relations tagged with route=power\"\n",
+    "#  3. All ways and its corresponding nodes tagged with power=*\"\n",
+    "# Than we merge all extracts data before converts it using osm2pgsql \n",
+    "#  to postGIS-enabled PostgreSQL databases.\n",
+    "#\n",
+    "# This section handle database connection to our postgreSQL database.\n",
+    "# Since ipyleaflet working with GeoJSON format, \n",
+    "#  we use query database that convert our extracted database to JSON format.\n",
+    "######\n",
     "\n",
-    "This section handle database connection to our postgreSQL database.\n",
-    "Since ipyleaflet working with GeoJSON format, we use query database that convert our extracted database to JSON format.\n",
-    "'''\n",
-    "\n",
-    "conn_string = \"dbname='gis' user='postgres' password='123456' host='localhost'\"\n",
+    "# Database, user, and password to be adapted.\n",
+    "conn_string = \"dbname='gis' user='postgres' password='123456' host='localhost'\" \n",
     "conn = ps.connect(conn_string)\n",
     "cur = conn.cursor()\n",
     "query = \"\"\"SELECT \n",
@@ -40,43 +44,47 @@
     "               planet_osm_line \n",
     "\n",
     "\"\"\"\n",
-    "columns = \"\"\"\n",
-    "        operator,\n",
-    "        name,\n",
-    "        highway,\n",
-    "        amenity,\n",
-    "        public_transport,\n",
-    "        railway,\n",
-    "        power,\n",
-    "        bicycle,\n",
-    "        barrier\n",
-    "\"\"\"\n",
-    "query_json = \"\"\"\n",
+    "query_json_line = \"\"\"\n",
     "SELECT row_to_json(fc)\n",
     " FROM ( SELECT 'FeatureCollection' As type, array_to_json(array_agg(f)) As features\n",
     " FROM (SELECT 'Feature' As type\n",
     "    , ST_AsGeoJSON(ST_Transform(lg.way, 4326))::json As geometry\n",
     "    , row_to_json((SELECT l FROM (SELECT {}) As l\n",
     "      )) As properties\n",
-    "   FROM planet_osm_line As lg   ) As f )  As fc limit 10;\n",
+    "   FROM planet_osm_line As lg ) As f )  As fc;\n",
     "\"\"\".format(columns)\n",
     "\n",
-    "cur.execute(query_json)\n",
-    "d = cur.fetchone()\n",
+    "# Since the big number of points extracted, \n",
+    "#  we limit the number to 100 randomly selected points \n",
+    "#  in objective to get faster response of codes when display the map with object plots.\n",
+    "query_json_point = \"\"\"\n",
+    "SELECT row_to_json(fc)\n",
+    " FROM ( SELECT 'FeatureCollection' As type, array_to_json(array_agg(f)) As features\n",
+    " FROM (SELECT 'Feature' As type\n",
+    "    , ST_AsGeoJSON(ST_Transform(lg.way, 4326))::json As geometry\n",
+    "    , row_to_json((SELECT l FROM (SELECT {}) As l\n",
+    "      )) As properties\n",
+    "   FROM planet_osm_point As lg order by random() limit 100) As f )  As fc;\n",
+    "\"\"\".format(columns)\n",
     "\n",
-    "df = pd.read_sql(query, conn)\n",
+    "cur.execute(query_json_point)\n",
+    "d_points = cur.fetchone()\n",
+    "cur.execute(query_json_line)\n",
+    "d_lines = cur.fetchone()\n",
+    "\n",
+    "#df = pd.read_sql(query, conn)\n",
     "conn.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb4041113c3a4f0697cb386fcb8b51b4",
+       "model_id": "8e27612d5422447fb1b4adde41455aab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -89,25 +97,36 @@
     }
    ],
    "source": [
-    "#Loading map area in Berlin\n",
-    "map = ipyl.Map(center=[52.52, 13.45], zoom=9)\n",
+    "# Loading map area in Berlin.\n",
+    "map = ipyl.Map(center=[52.52, 13.45], zoom=10)\n",
     "label = ipyw.Label(layout=ipyw.Layout(width='100%'))\n",
     "\n",
-    "#Loading GeoJSON to display extracted data on the map\n",
-    "layer = ipyl.GeoJSON(data=d[0], hover_style={'fillColor': 'red'})\n",
+    "# Loading GeoJSON to display extracted data on the map.\n",
+    "layer_points = ipyl.GeoJSON(data=d_points[0], hover_style={'fill_color': 'red'}, style={'fill_color':'#001010','fill':True})\n",
+    "layer_lines = ipyl.GeoJSON(data=d_lines[0],style={'color':'red'})\n",
     "\n",
-    "#Function handling hover action to show label properties below the map\n",
+    "######\n",
+    "# Function hover_handler handles hover action to show label properties below the map. \n",
+    "# But we found that ipyleaflet 'on_hover' feature only works for line object. \n",
+    "# For point object we need to use 'on_click' on the object then label will be shown below the map.\n",
+    "######\n",
+    "\n",
     "def hover_handler(event=None, id=None, properties=None):\n",
     "    s = \"\"\n",
     "    for key, value in properties.items():\n",
-    "         s = s + str(key) +\":\" + str(value) + \";\\t\"\n",
+    "        s = s +str(key) +\":\" + str(value) + \";\\t\"\n",
     "    label.value = s\n",
     "    \n",
-    "layer.on_hover(hover_handler)\n",
-    "map.add_layer(layer)\n",
+    "# Hover lines to show label data.\n",
+    "layer_lines.on_hover(hover_handler)\n",
+    "# Click points to show label data.\n",
+    "layer_points.on_click(hover_handler)\n",
+    "# Add layer to differentiate lines and points. \n",
+    "map.add_layer(layer_lines)\n",
+    "map.add_layer(layer_points)\n",
     "\n",
-    "\n",
-    "ipyw.VBox([map, label])\n"
+    "# Showing map.\n",
+    "ipyw.VBox([map, label])"
    ]
   },
   {
