--- a/4-OpenStreetMap/osm.ipynb
+++ b/4-OpenStreetMap/osm.ipynb
@@ -19,6 +19,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "######\n",
+    "# Preliminary works:\n",
+    "# To extract OpenStreetMap data that we want to display here, \n",
+    "#  we created filter following transnet project as below:\n",
+    "#  1. All power nodes/ways of relations tagged with power=*\"\n",
+    "#  2. All relations tagged with route=power\"\n",
+    "#  3. All ways and its corresponding nodes tagged with power=*\"\n",
+    "#\n",
+    "# Afterwards, we merge all extracted data before converts it using osm2pgsql \n",
+    "#  to postGIS-enabled PostgreSQL databases.\n",
+    "######"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "######\n",
+    "# This section handle database connection to our postgreSQL database.\n",
+    "# Since ipyleaflet working with GeoJSON format, \n",
+    "#  we use query database that convert our extracted database to JSON format.\n",
+    "######\n",
+    "\n",
+    "# Database, user, and password to be adapted.\n",
     "conn_string = \"dbname='gis' user='postgres' password='123456' host='localhost'\"\n",
     "conn = ps.connect(conn_string)\n",
     "cur = conn.cursor()\n",
@@ -49,6 +75,11 @@
     "   FROM planet_osm_line As lg ) As f )  As fc;\n",
     "\"\"\".format(columns)\n",
     "\n",
+    "######\n",
+    "# Since the big number of points extracted, \n",
+    "#  we limit the number to 100 randomly selected points \n",
+    "#  in objective to get faster response of codes when display the map with object plots.\n",
+    "######\n",
     "query_json_point = \"\"\"\n",
     "SELECT row_to_json(fc)\n",
     " FROM ( SELECT 'FeatureCollection' As type, array_to_json(array_agg(f)) As features\n",
@@ -58,7 +89,6 @@
     "      )) As properties\n",
     "   FROM planet_osm_point As lg order by random() limit 100) As f )  As fc;\n",
     "\"\"\".format(columns)\n",
-    "\n",
     "\n",
     "cur.execute(query_json_point)\n",
     "d_points = cur.fetchone()\n",
@@ -75,25 +105,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Loading map area in Berlin.\n",
     "map = ipyl.Map(center=[52.52, 13.45], zoom=10)\n",
     "label = ipyw.Label(layout=ipyw.Layout(width='100%'))\n",
     "\n",
+    "# Loading GeoJSON to display extracted data on the map.\n",
     "layer_points = ipyl.GeoJSON(data=d_points[0], hover_style={'fill_color': 'red'}, style={'fill_color':'#001010','fill':True})\n",
     "layer_lines = ipyl.GeoJSON(data=d_lines[0],style={'color':'red'})\n",
     "\n",
+    "######\n",
+    "# Function hover_handler handles hover action to show label properties below the map. \n",
+    "# But we found that ipyleaflet 'on_hover' feature only works for line object. \n",
+    "# For point object we need to use 'on_click' on the object then label will be shown below the map.\n",
+    "######\n",
     "def hover_handler(event=None, id=None, properties=None):\n",
     "    s = \"\"\n",
     "    for key, value in properties.items():\n",
     "        s = s +str(key) +\":\" + str(value) + \";\\t\"\n",
     "    label.value = s\n",
     "    \n",
+    "# Hover lines to show label data.\n",
     "layer_lines.on_hover(hover_handler)\n",
+    "# Click points to show label data.\n",
     "layer_points.on_click(hover_handler)\n",
+    "# Add layer to differentiate lines and points. \n",
     "map.add_layer(layer_lines)\n",
     "map.add_layer(layer_points)\n",
     "\n",
-    "ipyw.VBox([map, label])\n",
-    "\n"
+    "# Showing map.\n",
+    "ipyw.VBox([map, label])\n"
    ]
   },
   {
@@ -120,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
