Update comment and capture

--- a/4-OpenStreetMap/osm.ipynb
+++ b/4-OpenStreetMap/osm.ipynb
@@ -45,7 +45,7 @@
     "######\n",
     "\n",
     "# Database, user, and password to be adapted.\n",
-    "conn_string = \"dbname='gis' user='postgres' password='123456' host='localhost'\"\n",
+    "conn_string = \"dbname='gisosm' user='postgres' password='' host='localhost'\"\n",
     "conn = ps.connect(conn_string)\n",
     "cur = conn.cursor()\n",
     "query = \"\"\"SELECT \n",
@@ -62,8 +62,7 @@
     "        public_transport,\n",
     "        railway,\n",
     "        power,\n",
-    "        bicycle,\n",
-    "        barrier\n",
+    "        route\n",
     "\"\"\"\n",
     "query_json_line = \"\"\"\n",
     "SELECT row_to_json(fc)\n",
@@ -106,7 +105,7 @@
    "outputs": [],
    "source": [
     "# Loading map area in Berlin.\n",
-    "map = ipyl.Map(center=[52.52, 13.45], zoom=10)\n",
+    "map = ipyl.Map(center=[52.52, 13.45], zoom=11, layout=ipyw.Layout(height='600px'))\n",
     "label = ipyw.Label(layout=ipyw.Layout(width='100%'))\n",
     "\n",
     "# Loading GeoJSON to display extracted data on the map.\n",
@@ -121,7 +120,10 @@
     "def hover_handler(event=None, id=None, properties=None):\n",
     "    s = \"\"\n",
     "    for key, value in properties.items():\n",
-    "        s = s +str(key) +\":\" + str(value) + \";\\t\"\n",
+    "        if str(value)!='None':\n",
+    "            s = s +str(key) +\":\" + str(value) + \";\\t\"\n",
+    "    if s==\"\":\n",
+    "        s = 'No Data'\n",
     "    label.value = s\n",
     "    \n",
     "# Hover lines to show label data.\n",
@@ -133,7 +135,7 @@
     "map.add_layer(layer_points)\n",
     "\n",
     "# Showing map.\n",
-    "ipyw.VBox([map, label])\n"
+    "ipyw.VBox([map, label])"
    ]
   },
   {
