--- a/5-NILMTK/Group_E NILMTK.ipynb
+++ b/5-NILMTK/Group_E NILMTK.ipynb
@@ -208,16 +208,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3 Calculate and plot the energy consumption fraction for each sub-meter"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "energy_fraction_per_submeter = elec.submeters().fraction_per_meter()\n",
+    "energy_fraction_per_submeter.plot()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (nilmtk5)",
+   "display_name": "Python (nilmtk)",
    "language": "python",
    "name": "nilmtk-env"
   },
