--- a/5-NILMTK/Group_E NILMTK.ipynb
+++ b/5-NILMTK/Group_E NILMTK.ipynb
@@ -223,6 +223,22 @@
     "energy_fraction_per_submeter = elec.submeters().fraction_per_meter()\n",
     "energy_fraction_per_submeter.plot()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.4 Find appliances of the type “single-phase induction motor”"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elec.select_using_appliances(category='single-phase induction motor')"
+   ]
   }
  ],
  "metadata": {
