nice plotting for active and apparent power fractions

--- a/5-NILMTK/Group_E NILMTK.ipynb
+++ b/5-NILMTK/Group_E NILMTK.ipynb
@@ -30,6 +30,7 @@
     "from nilmtk import DataSet\n",
     "from nilmtk.utils import print_dict\n",
     "from nilmtk.timeframe import TimeFrame\n",
+    "import pandas as pd\n",
     "\n",
     "ukdale = DataSet('./data/ukdale.h5')\n",
     "\n",
@@ -168,7 +169,8 @@
     "ukdale_window.set_window(start='2014-04-28', end='2014-04-29')\n",
     "\n",
     "fridge_meter = ukdale_window.buildings[1].elec['fridge freezer']\n",
-    "light_meter = ukdale_window.buildings[1].elec['light']"
+    "light_meter = ukdale_window.buildings[1].elec['light']\n",
+    "elec = ukdale_window.buildings[1].elec"
    ]
   },
   {
@@ -217,11 +219,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "energy_fraction_per_submeter = elec.submeters().energy_per_meter().transpose().fillna(0)\n",
+    "del energy_fraction_per_submeter['reactive']\n",
+    "active_en = energy_fraction_per_submeter['active']\n",
+    "active_en_frac = active_en/active_en.sum()\n",
+    "active_en_frac.plot(kind=\"bar\", figsize=(15,10), title=\"Active Energy Fraction\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "energy_fraction_per_submeter = elec.submeters().fraction_per_meter()\n",
-    "energy_fraction_per_submeter.plot()"
+    "apparent_en = energy_fraction_per_submeter['apparent']\n",
+    "apparent_en_frac = apparent_en/apparent_en.sum()\n",
+    "apparent_en_frac.plot(kind=\"bar\", figsize=(15,10), title=\"Apparent Energy Fraction\")"
    ]
   },
   {
@@ -243,7 +261,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (nilmtk)",
+   "display_name": "Python (nilmtk5)",
    "language": "python",
    "name": "nilmtk-env"
   },
