--- a/5-NILMTK/Group_E NILMTK.ipynb
+++ b/5-NILMTK/Group_E NILMTK.ipynb
@@ -257,11 +257,140 @@
    "source": [
     "elec.select_using_appliances(category='single-phase induction motor')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "import pandas as pd\n",
+    "from six import iteritems\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "train = DataSet('./data/ukdale.h5')\n",
+    "test = DataSet('./data/ukdale.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train.set_window(end=\"24-3-2013\")\n",
+    "test.set_window(start=\"25-3-2013\")\n",
+    "\n",
+    "train_elec = train.buildings[3].elec\n",
+    "test_elec = test.buildings[3].elec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_elec.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_elec.mains().plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mains = train_elec.mains()\n",
+    "mains_df = next(mains.load())\n",
+    "mains_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Combinatorial Optimisation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start = time.time()\n",
+    "from nilmtk.disaggregate import CombinatorialOptimisation\n",
+    "from nilmtk.tests.testingtools import data_dir\n",
+    "\n",
+    "co = CombinatorialOptimisation()\n",
+    "co.train(train_elec)\n",
+    "end = time.time()\n",
+    "print(\"Train runtime =\", end-start, \"seconds.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = {}\n",
+    "gt= {}\n",
+    "\n",
+    "for i, chunk in enumerate(test_elec.mains().load()):\n",
+    "    chunk_drop_na = chunk.dropna()\n",
+    "    pred[i] = co.disaggregate_chunk(chunk_drop_na)\n",
+    "    gt[i]={}\n",
+    "    \n",
+    "    for meter in test_elec.submeters().meters:\n",
+    "        # Only use the meters that we trained on (this saves time!)    \n",
+    "        gt[i][meter] = next(meter.load())\n",
+    "    gt[i] = pd.DataFrame({k:v.squeeze() for k,v in iteritems(gt[i])}, index=next(iter(gt[i].values())).index).dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gt_overall = pd.concat(gt)\n",
+    "gt_overall.index = gt_overall.index.droplevel()\n",
+    "pred_overall = pd.concat(pred)\n",
+    "pred_overall.index = pred_overall.index.droplevel()\n",
+    "\n",
+    "gt_overall = gt_overall[pred_overall.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (nilmtk5)",
+   "display_name": "Python (nilmtk)",
    "language": "python",
    "name": "nilmtk-env"
   },
