--- a/5-NILMTK/Group_E NILMTK.ipynb
+++ b/5-NILMTK/Group_E NILMTK.ipynb
@@ -385,7 +385,108 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gt_index_utc = gt_overall.index.tz_convert(\"UTC\")\n",
+    "pred_index_utc = pred_overall.index.tz_convert(\"UTC\")\n",
+    "common_index_utc = gt_index_utc.intersection(pred_index_utc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_timezone = train.metadata['timezone']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "common_index_local = common_index_utc.tz_convert(local_timezone)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gt_overall = gt_overall.ix[common_index_local]\n",
+    "pred_overall = pred_overall.ix[common_index_local]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gt_overall.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "appliance_labels = [m.label() for m in gt_overall.columns.values]\n",
+    "gt_overall.columns = appliance_labels\n",
+    "pred_overall.columns = appliance_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_overall.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_overall.head(1000).plot(label=\"Pred\")\n",
+    "gt_overall.head(1000).plot(label=\"GT\")\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_squared_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rms_error = {}\n",
+    "for appliance in gt_overall.columns:\n",
+    "    rms_error[appliance] = np.sqrt(mean_squared_error(gt_overall[appliance], pred_overall[appliance]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.Series(rms_error)"
+   ]
   }
  ],
  "metadata": {
