--- a/5-NILMTK/Group_E NILMTK.ipynb
+++ b/5-NILMTK/Group_E NILMTK.ipynb
@@ -246,7 +246,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.4 Find appliances of the type “single-phase induction motor”"
+    "### 2.4 Highest Power Consuming Appliance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_appliance = elec.submeters().select_top_k(k=1).energy_per_meter()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.5 Find appliances of the type “single-phase induction motor”"
    ]
   },
   {
